# er-archipelago

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  ANALYSIS-dlc-progression-map.md  Alaric.yaml  Alaric_numregions3_dlcoff.yaml  BRIEF-PARALLEL-INDEX.md  BRIEF-apworld-content.md  BRIEF-contract-map-reveal.md  BRIEF-dlc-only.md  CONTRACT-DELTA-20260706.md  CONTRIBUTING.md  COVERAGE-REPORT-20260709T022721Z.md  DLC-AREA-ID-CAPTURE.md  DLC-READINESS-AUDIT.md  Directory.Build.props  Downloads - Shortcut.lnk  ER-OPTIONS-REFERENCE.yaml  Elden-Ring-Archipelago-Player-Guide.md  EldenRing-MASTER-template.yaml  EldenRing-bosssweep-dlc-test.yaml  EldenRing-dlc-only-RUN.yaml  EldenRing-dlc-only-test.yaml  EldenRing-dlc-only-trimmed-test.yaml  EldenRing-godrick-trimmed-RUN.yaml  FABLE-ARCH-REVIEW-FINDINGS-20260706.md  FABLE-ARCH-REVIEW-HANDOFF-20260706.md  FABLE-FIX-PARALLELIZATION-PLAN-20260706.md  HANDOFF.md  MEMORY.md  NOTES-fix-7-volcano-loop.md  NOTES-legible-locks-assessment-20260709.md  PR-A1-useful-reclass-ammo-guard.md  PR-B1-soulsids-parseadd.md  PR-UPSTREAM-PLAN.md  PROVENANCE.md  README.md  RECON-contract-keys-20260706.md  RECON-tracker-scaling-20260706.md  (+444 more)
_bridge/: .sync-snapshot.json  BRIDGE-README.md  board.template.html  cards.json  er-archipelago-kanban.html  sync_board.py  test_sync_board.py
archive/: BRIEF-PARALLEL-INDEX.md  BRIEF-client-notify-cleanup.md  BRIEF-notify-boss-defer.md  BRIEF-poptracker-pipeline.md  BRIEF-randomizer-bake-polish.md  BRIEF-randomizer-bake-stability.md  HANDOFF-apworld-content.md  HANDOFF-natural-key-triggers.md  HANDOFF-num-regions-chain-trackA.md  HANDOFF-num-regions-chain-trackB.md  HANDOFF-num-regions-chain-trackC.md  HANDOFF-num-regions-pool-runes-trackA.md  HANDOFF-num-regions-pool-runes-trackB.md  HANDOFF-num-regions-random-start.md  HANDOFF-num-regions.md  HANDOFF-poptracker-dlc-only.md  HANDOFF-poptracker.md  HANDOFF-sphere-scaling-baker.md  HANDOFF.md  SPEC-ap-icon.md  SPEC-auto-equip.md  SPEC-boss-attribution.md  SPEC-check-trim.md  SPEC-chokepoint-locks.md  SPEC-completion-scaling.md  SPEC-control-randomizer.md  SPEC-dlc-mini-campaign.md  SPEC-dungeon-sweep.md  SPEC-fifthmatt-er-enemy-features.md  SPEC-global-scadutree-blessing.md  SPEC-godrick-fog-wall.md  SPEC-ingame-check-indicators.md  SPEC-natural-locks.md  SPEC-notify-banner.md  SPEC-notify-item-source.md  SPEC-num-regions-chain.md  SPEC-num-regions-pool-runes.md  SPEC-num-regions.md  SPEC-oops-all-legacy-dungeons.md  SPEC-pool-builder.md  (+88 more)
docs/: elden-ring-tier-list.md
greenfield/: .gitattributes  .gitignore  CONTRACT.md  HANDOFF.md  IN-GAME-VALIDATION.md  LESSONS-LEARNED.md  LOCATION-CATEGORY-AUDIT.md  README.md  SPEC-PARITY.md  SPEC-starting-class-rando-20260708.md  arena_graces.tsv  boss_area_regions.tsv  ci-linux.sh  desc_sources.py  dungeon_regions.tsv  esd_gifts.tsv  fuzz_gf.py  gen-greenfield.ps1  gen_contract.py  gen_data.py  gen_data_clean.py  gen_fuzz_gf_yamls.py  gen_handoff.py  global_region_worklist.csv  grace_flags.tsv  grace_ground.tsv  grace_names.tsv  grace_region_map.tsv  item_grace_coords.tsv  location_descriptions.tsv  map_names.tsv  merchant_shops.tsv  msb_flag_region.tsv  nearest_grace.tsv  play_region_buckets.tsv  provision-linux-env.sh  region_groups.py  region_map.csv  region_override_worklist.csv  region_overrides.tsv  (+7 more)
matt-free-pipeline/: CURATION-RESULTS.md  DATAMINE-FEASIBILITY-slotdata.md  EldenRing-mattfree-mvp.yaml  INTEGRATION-MVP.md  MATT-FREE-EXTRACTION-poc.md  PROVENANCE-location-descriptions.md  README-HANDOFF.md  bucket_resolution_report.csv  build_locations.py  curate_locations.py  curated_locations.csv  extract_locations.py  flag_to_region.csv  gen_mattfree_locations.py  item_table_keys.json  locations_generated.py  lot_to_map.tsv  low_confidence_review.csv  merge_regions.py  region_assign.py  resolve_buckets.py  resolve_global_tail.py  synthetic_flags.csv  tail_resolution_report.csv
me3/: ap_save_33714196047894776729_Player1.json  check_lots_table.json  shoplineup_flags.json
poptracker/: .gitignore  README.md  build_poptracker.ps1  manifest.json
presets/: base-shattering.yaml  dlc-only.yaml  first-run.yaml  full-dlc-journey.yaml  multiworld-sync.yaml  short-solo.yaml
release-v0.1/: CHANGELOG.md  CHECKS-AND-PROGRESSION.md  EldenRing-Shattering.yaml  HOW-THE-SHATTERING-WORKS.md  SETUP.md
release-v0.2/: ATTRIBUTION.md  CHANGELOG.md  CLIENT-BUNDLE-README.md  DISTRIBUTION.md  ENEMY-AND-STARTING-CLASS-RANDOMIZATION.md  EldenRing.yaml  KNOWN-ISSUES.md  LICENSE  NEXUS-DESCRIPTION.txt  PLAYER-GUIDE.md  PROVENANCE.md  RELEASE-NOTES-v0.2.md  SCREENSHOTS.md  SETUP.md
rust-client-spike/: BUILD-NOTES.md  Cargo.toml  DEATHLINK-WIRING.md  LICENSE  PHASE5-PORT-PLAN.md  PORT-GAP-MAP.md  PROGRESSIVE-WIRING.md  RE-WORKSHEET-autoupgrade-scadu.md  README.md  VERIFY-RESOLUTION.md  add-er-logic-to-pr-42.ps1
rust-client-spike/crates/eldenring-ap/: Cargo.toml
rust-client-spike/crates/eldenring-ap/src/: lib.rs
rust-client-spike/crates/eldenring-ap/src/game/: console.rs  detour.rs  features.rs  flags.rs  fmg_inject.rs  fmg_probe.rs  grant.rs  lookupentry_probe.rs  mod.rs  net.rs  params.rs  scout_proof.rs  shop_flags.rs  shop_icon.rs  shop_preview.rs  shop_sell.rs
rust-client-spike/crates/er-codec/: Cargo.toml
rust-client-spike/crates/er-codec/src/: lib.rs
rust-client-spike/crates/er-logic/src/: detour_decide.rs  lib.rs  location_check.rs  region_lock.rs  slot_data.rs  vanilla_suppress.rs
rust-client-spike/crates/er-semver/: Cargo.toml
rust-client-spike/crates/er-semver/src/: lib.rs
seeds-archive/: park-current-seed.ps1
testers/: A1-first-light.yaml  A2-the-shattering.yaml  A3-land-of-shadow.yaml  README.md
tools/: MOUNT-SAFETY.md  build_location_remoteness.py  build_nearest_grace.py  build_tile_grace.py  check_integrity.py  check_options_metadata.ps1  datamine_arena_graces.py  datamine_bell_shops.py  datamine_boss_area_regions.py  datamine_boss_drops.py  datamine_boss_healthbars.py  datamine_boss_reward_lots.py  datamine_dungeon_regions.py  datamine_esd_gates.py  datamine_grace_ground.py  datamine_grace_names.py  gf_test.py  (+26 more)
(+637 files in other folders)
