[workspace]
resolver = "2"
members = [
    "crates/er-codec",
    "crates/er-semver",
    "crates/eldenring-ap",
]

# Pure-logic crates (er-codec, er-semver) build and test on ANY host (Linux/macOS CI).
# eldenring-ap is the in-process cdylib spike: its Windows-only deps are target-gated, so the
# workspace still `cargo build`s and `cargo test`s on a non-Windows host — the in-process modules
# are simply #[cfg(windows)]-compiled out there.

[profile.release]
# A game-injected DLL wants a small, panic-contained artifact.
panic = "abort"
lto = "thin"
codegen-units = 1

# --- Phase 4 networking: archipelago_rs version patch ---------------------------------------------
# archipelago_rs 2.1.1 hardcodes its AP Connect version at 0.6.0, but the ER apworld's
# required_client_version is (0,6,6) -> stock crate refused with IncompatibleVersion. Track the fork
# branch (Connect VERSION const bumped to 0.6.6) so the spike builds off the same thing the PR ships.
# IMPORTANT: cargo PINS a git commit in Cargo.lock and reuses a cached checkout, so after the fork
# branch moves you MUST run `cargo update -p archipelago_rs` (NOT just `cargo build`) or it keeps
# sending the stale 0.6.0. (Local fallback that needs no fetch: archipelago_rs = { path =
# "third_party/archipelago_rs" } -- that copy still has build:6.)
[patch.crates-io]
archipelago_rs = { git = "https://github.com/4laric/archipelago_rs", branch = "er-version-0.6.6" }
