[workspace]
resolver = "2"
members = [
    "crates/er-codec",
    "crates/er-semver",
    "crates/eldenring-ap",
    "crates/er-logic",
]

# Pure-logic crates (er-codec, er-semver) build and test on ANY host (Linux/macOS CI).
# eldenring-ap is the in-process cdylib spike: its Windows-only deps are target-gated, so the
# workspace still `cargo build`s and `cargo test`s on a non-Windows host — the in-process modules
# are simply #[cfg(windows)]-compiled out there.

[profile.release]
# A game-injected DLL wants a small, panic-contained artifact.
panic = "abort"
lto = "thin"
codegen-units = 1

# --- Phase 4 networking: archipelago_rs version patch ---------------------------------------------
# Use a LOCAL copy of the crate with the Connect VERSION const bumped to 0.6.6. archipelago_rs 2.1.1
# reports 0.6.0; the ER apworld requires (0,6,6) -> IncompatibleVersion without this.
# WHY PATH, NOT THE GIT FORK: a `git`/same-version `[patch.crates-io]` kept resolving to the stock
# crates.io 0.6.0 (cargo "patch not used"), so the build silently regressed. A PATH patch always
# overrides, no version-match games, no fetch/cache. (The fork branch er-version-0.6.6 still exists
# for the upstream PR; once that PR lands + a new crate version is published, drop this patch.)
# After switching the patch source, `del Cargo.lock` then rebuild so the stale crates.io pin clears.
[patch.crates-io]
archipelago_rs = { path = "third_party/archipelago_rs" }
